# Odoo-Persons

./: README.MD  README.md  docker-compose.yml  pyproject.toml
addons/persons/: __init__.py  __manifest__.py
addons/persons/controllers/: main.py
addons/persons/models/: __init__.py  persons.py
addons/persons/views/: person_menu.xml  person_templates.xml  person_views.xml
config/: odoo.conf
